<resources>
    <string name="app_name">Hello India Business</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_network">Network</string>
    <string name="title_profile">Profile</string>
    <string name="title_add_user">Add User</string>
    <string name="title_more">History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint">Choose Plan</string>
</resources>
